[project]
name = "share-your-story"
version = "0.2.0"
description = "A simple interface for people to share their stories, with adaptive questionnaires and tag-based organization"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.3",
    "gunicorn>=23.0",
    "llm",
    "llm-anthropic",
    "llm-ollama",
    "llm-whisper-api",
    "pillow>=12.1.1",
    "sqlite-utils",
]

[project.optional-dependencies]
openai = [
    "openai>=1.55.0",
    "python-dotenv>=1.0.1",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["storyteller*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
